@startuml
!define primary_key(x) <b><color:#b8861b><&key></color> x</b>
!define foreign_key(x) <color:#aaaaaa><&key></color> x
!define column(x) <color:#efefef><&media-record></color> x
!define table(x) entity x <<(T, white)>>

table(user) {
  primary_key(user_id): integer
  ---
  column(email): varchar(100)
  column(username): varchar(50)
  column(password_hash): varchar(100)
}

table(user_task) {
  primary_key(foreign_key(user_id)): integer
  primary_key(foreign_key(task_id)): integer
}

table(task) {
  primary_key(task_id): integer
  ---
  column(title): varchar(100)
  column(description): varchar(500)
  column(status): integer
}

user ||--|{ user_task : 1..n
user_task }|--|| task : n..1

@enduml